# abstracts-for-articles

./: .env.example  .gitignore  CHECKPOINT.md  CODEX_V0_5_1_PRODUCTION_HARDENING_PROMPT.md  README.md  pyproject.toml
.github/workflows/: daily-digest.yml
auv_intel_digest/: __main__.py  cli.py  config_loader.py  models.py  pipeline.py  scheduled_digest.py  settings.py
auv_intel_digest/classify/: keyword_classifier.py
auv_intel_digest/dedupe/: deduper.py  normalizer.py  store.py
auv_intel_digest/notifiers/: __init__.py  base.py  composite.py  email.py  file_only.py  qq_onebot.py  telegram.py
auv_intel_digest/reports/: json_writer.py  markdown.py
auv_intel_digest/reports/templates/: daily_report.md.j2
auv_intel_digest/sources/: __init__.py  arxiv.py  base.py  crossref.py  factory.py  github.py  openalex.py  rss.py
auv_intel_digest/summarizers/: __init__.py  base.py  factory.py  fake.py  noop.py  openai_compatible.py  openai_summarizer.py
config/: app.yaml  sources.yaml  topics.yaml
examples/: sources.example.json
tests/: test_classification.py  test_collectors.py  test_dedupe.py  test_email_notifier.py  test_github_actions_workflow.py  test_notifier_fallback.py  test_openai_compatible.py  test_pipeline.py  test_report_generation.py  test_scheduled_digest.py  test_summarizers.py  test_telegram_notifier.py
